# alic3

./: Cargo.toml
src/: asm_parser.rs  assembler.rs  bit_twiddling.rs  disasm.rs  emulator.rs  gui.rs  lib.rs  main.rs  opcode.rs
