[package]
name = "alic3"
version = "0.1.0"
edition = "2021"
default-run = "main"
features = "by_the_book"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
byteorder = "1"
crossterm = "0.22"

[features]
default = ["by_the_book"]
by_the_book = []

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "disasm"
path = "src/disasm.rs"