[package]
name = "alic3"
version = "0.1.0"
edition = "2021"
default-run = "exec"
features = "by_the_book"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
byteorder = "1"
crossterm = "0.22"
logos = "0.12"
thiserror = "1"

[features]
default = []
by_the_book = []

[lib]
name = "alic3"
path = "src/lib.rs"

[[bin]]
name = "exec"
path = "src/bin/exec.rs"

[[bin]]
name = "asm"
path = "src/bin/asm.rs"

[[bin]]
name = "disasm"
path = "src/bin/disasm.rs"