[package]
name = "alic3"
version = "0.1.0"
edition = "2021"
default-run = "exec"
features = "third_edition"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
byteorder = "1"
crossterm = "0.22"
logos = "0.12"
thiserror = "1"
egui = { version = "0.16", optional = true }
egui_glow = { version = "0.16", optional = true }
glow = { version = "0.11", optional = true }
glutin = { version = "0.28.0", optional = true }

[features]
default = ["gui"]
third_edition = []
gui = ["egui", "egui_glow", "glow", "glutin"]

[lib]
name = "alic3"
path = "src/lib.rs"

[[bin]]
name = "exec"
path = "src/bin/exec.rs"

[[bin]]
name = "asm"
path = "src/bin/asm.rs"

[[bin]]
name = "disasm"
path = "src/bin/disasm.rs"

[[bin]]
name = "gui"
path = "src/bin/gui.rs"
required-features = ["gui"]